# medical-record-copilot

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/backend/: database.py  main.py  models.py
backend/src/backend/api/: case_routes.py  file_routes.py
backend/src/backend/app/: logger.py  main.py  settings.py
backend/src/backend/db/: database.py  models.py  session.py
backend/src/backend/pdf/: __init__.py  extractor.py  metadata.py  text_extractor.py  validator.py
backend/tests/: conftest.py
backend/tests/backend/api/: tests_file_routes.py
backend/tests/backend/db/: test_database.py
backend/tst/backend/: test_main.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/case/[case_id]/: page.tsx
frontend/components/case/: case-header.tsx  status-bar.tsx
frontend/components/case/steps/: card.tsx  checkbox.tsx  evidence.tsx  header.tsx  list.tsx  logic.tsx  options-list.tsx  options.tsx  reasoning.tsx  selected-option.tsx  selected.tsx
frontend/components/common/collapsible/: index.tsx
frontend/components/file-upload/: index.tsx
frontend/components/guidelines-upload/: index.tsx
frontend/components/medical-record-upload/: index.tsx
frontend/context/: dashboard-context.tsx
frontend/lib/: utils.ts
frontend/services/: api.ts
frontend/types/: case.ts
