[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dev Rishi Khare", email = "devrishik@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.5",
    "pytest>=8.3.3",
    "httpx>=0.28.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
server = "uvicorn src.backend.main:app --reload"
test = "pytest tst"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
